Commit 003 - Añadimos <BR> a index.html

--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
   </head>
   <body>
     <p>P&aacute;gina Principal de Javier Boix</p>
-    <a href="alumno01.php">P&aacute;gina de alumno01</a>
-    <a href="alumno02.php">P&aacute;gina de alumno02</a>
+    <a href="alumno01.php">P&aacute;gina de alumno01</a><br>
+    <a href="alumno02.php">P&aacute;gina de alumno02</a><br>
   </body>
 </html>
